@@ -1,77 +1,0 @@
-#!/bin/sh
-
-# Check that `include' fail unredable/non-existent files
-
-# WARNING: ratfor must not abort on failed include. Check for this, too.
-
-. ./defs.sh || exit 99
-
-test ! -f none.r
-echo 'NOTINCLUDED' > unread.r
-chmod a-r unread.r
-test -f unread.r
-test ! -r unread.r
-
-ls -l unread.r 2>&1 || :
-ls -l none.r 2>&1 || :
-
-cat > tst1.r <<EOF
-include none.r
-#2
-#3
-include none.r
-stillalive
-EOF
-
-cat <<EOF > tst2.r
-include unread.r
-#2
-x3
-#4
-y5
-include unread.r
-stillalive
-EOF
-
-cat > tst3.r <<EOF
-#1
-#2
-include none.r
-#4
-include nest.r
-stillalive1
-EOF
-
-cat > nest.r <<EOF
-#1
-#2
-#3
-include none.r
-stillalive2
-EOF
-
-run_RATFOR -e 1 tst1.r || testcase_FAIL
-mv stdout stdout1
-mv stderr stderr1
-$FGREP 'tst1.r:1: include: I/O error' stderr1 || testcase_FAIL
-$FGREP 'tst1.r:4: include: I/O error' stderr1 || testcase_FAIL
-$FGREP 'stillalive' stdout1 || testcase_FAIL
-
-run_RATFOR -e 1 tst2.r || testcase_FAIL
-mv stdout stdout2
-mv stderr stderr2
-$FGREP 'tst2.r:1: include: I/O error' stderr2 || testcase_FAIL
-$FGREP 'tst2.r:6: include: I/O error' stderr2 || testcase_FAIL
-$FGREP 'stillalive' stdout2 || testcase_FAIL
-
-run_RATFOR -e 1 tst3.r || testcase_FAIL
-mv stdout stdout3
-mv stderr stderr3
-$FGREP 'tst3.r:3: include: I/O error' stderr3 || testcase_FAIL
-$FGREP 'nest.r:4: include: I/O error' stderr3 || testcase_FAIL
-$FGREP 'stillalive1' stdout3 || testcase_FAIL
-$FGREP 'stillalive2' stdout3 || testcase_FAIL
-
-testcase_PASS
-
-# vim: ft=sh ts=4 sw=4 et
