@@ -1,0 +1,17 @@
+#!/bin/sh
+
+# Check that ratfor barfs if input file does not exist.
+
+. ./defs.sh || exit 99
+
+: > unread.r
+chmod a-r unread.r
+
+run_RATFOR -e 1 -- unread.r || testcase_FAIL
+rx='unread\.r: cannot open for reading: [pP]ermission denied'
+$GREP "$rx" stderr || testcase_FAIL
+test -s stdout && testcase_FAIL
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
